--- a/index.html
+++ b/index.html
@@ -52,6 +52,42 @@
           </div>
         </div>
       </div>
+
+      <div id="extraInfo-1" class="extraInfo">
+        <h1> SYMPTOMS </h1>
+        <p>
+          Feelings of sadness, tearfulness, emptiness or hopelessness <br>
+          Angry outbursts, irritability or frustration, even over small matters <br>
+          Loss of interest or pleasure in most or all normal activities, such as sex, hobbies or sports <br>
+          Sleep disturbances, including insomnia or sleeping too much <br>
+          Tiredness and lack of energy, so even small tasks take extra effort <br>
+          Reduced appetite and weight loss or increased cravings for food and weight gain <br>
+          Anxiety, agitation or restlessness <br>
+          Slowed thinking, speaking or body movements <br>
+          Feelings of worthlessness or guilt, fixating on past failures or self-blame <br>
+          Trouble thinking, concentrating, making decisions and remembering things <br>
+          Frequent or recurrent thoughts of death, suicidal thoughts, suicide attempts or suicide <br>
+          Unexplained physical problems, such as back pain or headaches
+        </p>
+      </div>
+      <div id="extraInfo-2" class="extraInfo">
+        <p>The signs of bipolar disorder can generally be divided into those for mania, and those for depression.</p>
+        <h1> MANIA </h1>
+        <p>
+          Feeling overly happy or “high” for long periods of time <br>
+          Having a decreased need for sleep <br>
+          Talking very fast, often with racing thoughts <br>
+          Feeling extremely restless or impulsive <br>
+          Becoming easily distracted <br>
+          Having overconfidence in your abilities <br>
+          Engaging in risky behavior, such as having impulsive sex, gambling with life savings, or going on big spending sprees
+        </p>
+      </div>
+      <div id="extraInfo-3" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
+
+
       <!-- PROF NOTE: This structure is one full "card" and "grid item" -->
       <div class="gridItem grid-item-4 flip-card">
         <div class="flip-card-inner">
@@ -85,6 +121,17 @@
           </div>
         </div>
       </div>
+
+      <div id="extraInfo-4" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
+      <div id="extraInfo-5" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
+      <div id="extraInfo-6" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
+
       <!-- PROF NOTE: This structure is one full "card" and "grid item" -->
       <div class="gridItem grid-item-7 flip-card">
         <div class="flip-card-inner">
@@ -118,7 +165,17 @@
           </div>
         </div>
       </div>
-    </div>
+
+      <div id="extraInfo-7" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
+      <div id="extraInfo-8" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
+      <div id="extraInfo-9" class="extraInfo">
+        <p>Here's the extra information</p>
+      </div>
     <script src="script.js" charset="utf-8"></script>
-  </body>
+  </div>
+</body>
 </html>
