--- a/index.html
+++ b/index.html
@@ -82,9 +82,38 @@
           Having overconfidence in your abilities <br>
           Engaging in risky behavior, such as having impulsive sex, gambling with life savings, or going on big spending sprees
         </p>
+        <h1> DEPRESSION </h1>
+        <p>
+          Feeling sad or hopeless for long periods of time <br>
+          Withdrawing from friends and family <br>
+          Losing interest in activities that you once enjoyed <br>
+          Having a significant change in appetite <br>
+          Feeling severe fatigue or lack of energy <br>
+          Having problems with memory, concentration, and decision making <br>
+          Thinking about or attempting suicide, or having a preoccupation with death
+        </p>
       </div>
       <div id="extraInfo-3" class="extraInfo">
-        <p>Here's the extra information</p>
+        <h1> PHYSCIAL SYMPTOMS </h1>
+        <p>
+          Blushing <br>
+          Nausea <br>
+          Excessive sweating <br>
+          Trembling or shaking <br>
+          Difficulty speaking <br>
+          Dizziness or lightheadedness <br>
+          Rapid heart rate
+        </p>
+        <h1> PSYCHOLOGICAL SYMPTOMS </h1>
+        <p>
+          Worrying intensely about social situations <br>
+          Worrying for days or weeks before an event <br>
+          Avoiding social situations or trying to blend into the background if you must attend <br>
+          Worrying about embarrassing yourself in a social situation <br>
+          Worrying that other people will notice you are stressed or nervous <br>
+          Needing alcohol to face a social situation <br>
+          Missing school or work because of anxiety
+        </p>
       </div>
 
 
