--- a/index.html
+++ b/index.html
@@ -152,13 +152,42 @@
       </div>
 
       <div id="extraInfo-4" class="extraInfo">
-        <p>Here's the extra information</p>
       </div>
       <div id="extraInfo-5" class="extraInfo">
-        <p>Here's the extra information</p>
+        <h1> SYMPTOMS </h1>
+        <p>
+          Fear of contamination or dirt <br>
+          Doubting and having difficulty tolerating uncertainty <br>
+          Needing things orderly and symmetrical <br>
+          Aggressive or horrific thoughts about losing control and harming yourself or others <br>
+          Unwanted thoughts, including aggression, or sexual or religious subjects
+        </p>
       </div>
       <div id="extraInfo-6" class="extraInfo">
-        <p>Here's the extra information</p>
+        <h1> SYMPTOMS </h1>
+        <p>
+          Recurrent, unwanted distressing memories of the traumatic event <br>
+          Reliving the traumatic event as if it were happening again (flashbacks) <br>
+          Upsetting dreams or nightmares about the traumatic event <br>
+          Severe emotional distress or physical reactions to something that reminds you of the traumatic event <br>
+          Trying to avoid thinking or talking about the traumatic event <br>
+          Avoiding places, activities or people that remind you of the traumatic event <br>
+          Negative thoughts about yourself, other people or the world <br>
+          Hopelessness about the future <br>
+          Memory problems, including not remembering important aspects of the traumatic event <br>
+          Difficulty maintaining close relationships <br>
+          Feeling detached from family and friends <br>
+          Lack of interest in activities you once enjoyed <br>
+          Difficulty experiencing positive emotions <br>
+          Feeling emotionally numb <br>
+          Being easily startled or frightened <br>
+          Always being on guard for danger <br>
+          Self-destructive behavior, such as drinking too much or driving too fast <br>
+          Trouble sleeping <br>
+          Trouble concentrating <br>
+          Irritability, angry outbursts or aggressive behavior <br>
+          Overwhelming guilt or shame
+        </p>
       </div>
 
       <!-- PROF NOTE: This structure is one full "card" and "grid item" -->
@@ -196,13 +225,66 @@
       </div>
 
       <div id="extraInfo-7" class="extraInfo">
-        <p>Here's the extra information</p>
+        <h1> SYMPTOMS </h1>
+        <p>
+          Having a short attention span and being easily distracted <br>
+          Making careless mistakes – for example, in schoolwork <br>
+          Appearing forgetful or losing things <br>
+          Being unable to stick to tasks that are tedious or time-consuming <br>
+          Appearing to be unable to listen to or carry out instructions <br>
+          Constantly changing activity or task <br>
+          Having difficulty organising tasks <br>
+          Being unable to sit still, especially in calm or quiet surroundings <br>
+          Constantly fidgeting <br>
+          Being unable to wait their turn <br>
+          Acting without thinking <br>
+          Interrupting conversations <br>
+          Little or no sense of danger
+        </p>
       </div>
       <div id="extraInfo-8" class="extraInfo">
-        <p>Here's the extra information</p>
+        <h1> SYMPTOMS </h1>
+        <p>
+          Extreme weight loss or not making expected developmental weight gains <br>
+          Thin appearance <br>
+          Fatigue <br>
+          Insomnia <br>
+          Dizziness or fainting <br>
+          Bluish discoloration of the fingers <br>
+          Hair that thins, breaks or falls out <br>
+          Soft, downy hair covering the body <br>
+          Absence of menstruation <br>
+          Constipation and abdominal pain <br>
+          Dry or yellowish skin <br>
+          Intolerance of cold <br>
+          Irregular heart rhythms <br>
+          Low blood pressure <br>
+          Dehydration <br>
+          Swelling of arms or legs <br>
+          Eroded teeth and calluses on the knuckles from induced vomiting <br>
+          Frequently skipping meals or refusing to eat <br>
+          Denial of hunger or making excuses for not eating <br>
+          Eating only a few certain "safe" foods, usually those low in fat and calories <br>
+          Adopting rigid meal or eating rituals, such as spitting food out after chewing <br>
+          Not wanting to eat in public <br>
+          Lying about how much food has been eaten <br>
+          Fear of gaining weight that may include repeated weighing or measuring the body <br>
+          Frequent checking in the mirror for perceived flaws <br>
+          Complaining about being fat or having parts of the body that are fat <br>
+          Covering up in layers of clothing <br>
+          Social withdrawal <br>
+          Irritability
+        </p>
       </div>
       <div id="extraInfo-9" class="extraInfo">
-        <p>Here's the extra information</p>
+        <h1> SYMPTOMS </h1>
+        <p>
+          Delusions <br>
+          Hallucinations <br>
+          Disorganized thinking (speech) <br>
+          Extremely disorganized or abnormal motor behavior <br>
+          Negative symptoms
+        </p>
       </div>
     <script src="script.js" charset="utf-8"></script>
   </div>
