--- a/index.html
+++ b/index.html
@@ -152,6 +152,18 @@
       </div>
 
       <div id="extraInfo-4" class="extraInfo">
+        <h1> SYMPTOMS </h1>
+        <p>
+          Fear of abandonment <br>
+          Unstable relationships <br>
+          Unclear or shifting self-image <br>
+          Impulsive, self-destructive behaviors <br>
+          Self-harm <br>
+          Extreme emotional swings <br>
+          Chronic feelings of emptiness <br>
+          Explosive anger <br>
+          Feeling suspicious or out of touch with reality
+        </p>
       </div>
       <div id="extraInfo-5" class="extraInfo">
         <h1> SYMPTOMS </h1>
